<resources>
    <string name="app_name">Notes</string>
    <string name="source_code"><u>Source Code</u></string>
    <string name="developer_name">from\nAyush Sabharwal</string>
    <string name="your_notes">Your notes</string>
    <string name="no_notes_to_display">No \uD83D\uDCDD to display</string>
    <string name="enter_a_note">Enter a note</string>
    <string name="clear_note">Clear note</string>
    <string name="create_note">Create note</string>
    <string name="save_note">Save note</string>
    <string name="your_details">Your details</string>
    <string name="person_name">%s %s</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="app_icon">App Icon</string>
    <string name="person">Person</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="delete_forever">Delete Forever</string>
    <string name="close">Close</string>
</resources>