<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesFragment">

    <TextView
        android:id="@+id/your_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4.5dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/your_notes"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/swipe_refresh_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/outline_person_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:background="@drawable/note_background"
        android:padding="6dp"
        android:src="@drawable/outline_person_24"
        app:layout_constraintBottom_toBottomOf="@+id/your_notes"
        app:layout_constraintEnd_toStartOf="@+id/outline_logout_24"
        app:layout_constraintTop_toTopOf="@+id/your_notes" />

    <ImageView
        android:id="@+id/outline_logout_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/note_background"
        android:padding="6dp"
        android:src="@drawable/outline_logout_24"
        app:layout_constraintBottom_toBottomOf="@+id/outline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outline_person_24" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4.5dp"
        android:layout_marginBottom="4.5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/enter_a_note"
        app:layout_constraintTop_toBottomOf="@+id/your_notes">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/no_notes_to_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/no_notes_to_display"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_note" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <EditText
        android:id="@+id/enter_a_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4.5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/open_sans_regular"
        android:hint="@string/enter_a_note"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/clear_note"
        app:layout_constraintTop_toBottomOf="@+id/swipe_refresh_layout" />

    <Button
        android:id="@+id/clear_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/clear_color"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/clear_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_a_note" />

    <Button
        android:id="@+id/create_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/create_note"
        app:layout_constraintBottom_toBottomOf="@id/clear_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear_note"
        app:layout_constraintTop_toTopOf="@+id/clear_note" />

</androidx.constraintlayout.widget.ConstraintLayout>